title head counts news items

--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>News!</h1>
+<h1> <%= @news_items.length %> News items</h1>
 <% @news_items.each do |news_item| %>
     <a href="<%= news_item_path news_item%>" class="summary">
       <%= image_tag(news_item.image.thumbnail.url, :class => "thumbnail inline") %>
